manifests-failed/consul-11.3.2.tgz-manifest.yaml
---
# Source: consul/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-consul
  namespace: "consul-11.3.2.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: consul
    app.kubernetes.io/version: 1.19.0
    helm.sh/chart: consul-11.3.2
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: consul
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8500
          protocol: TCP
        - port: 8400
          protocol: TCP
        - port: 8301
          protocol: TCP
        - port: 8301
          protocol: UDP
        - port: 8300
          protocol: TCP
        - port: 8600
          protocol: TCP
        - port: 8600
          protocol: UDP
---
# Source: consul/templates/consul-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-consul-headless
  namespace: "consul-11.3.2.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: consul
    app.kubernetes.io/version: 1.19.0
    helm.sh/chart: consul-11.3.2
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: http
      protocol: TCP
      port: 8500
    - name: rpc
      port: 8400
    - name: serflan-tcp
      protocol: TCP
      port: 8301
    - name: serflan-udp
      protocol: UDP
      port: 8302
    - name: serfwan-tcp
      protocol: TCP
      port: 8302
    - name: serfwan-udp
      protocol: UDP
      port: 8301
    - name: rpc-server
      port: 8300
    - name: dns-tcp
      port: 8600
    - name: dns-udp
      protocol: UDP
      port: 8600
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: consul
  sessionAffinity: None
---
# Source: consul/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-consul-ui
  namespace: "consul-11.3.2.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: consul
    app.kubernetes.io/version: 1.19.0
    helm.sh/chart: consul-11.3.2
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: consul
---
# Source: consul/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-consul
  namespace: "consul-11.3.2.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: consul
    app.kubernetes.io/version: 1.19.0
    helm.sh/chart: consul-11.3.2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: consul
  replicas: 3
  podManagementPolicy: Parallel
  serviceName: my-release-consul-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: consul
        app.kubernetes.io/version: 1.19.0
        helm.sh/chart: consul-11.3.2
    spec:
      
      serviceAccountName: my-release-consul
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: consul
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: consul
          image: docker.io/bitnami/consul:1.19.0-debian-12-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8500
            - name: rpc
              containerPort: 8400
            - name: serflan-tcp
              protocol: "TCP"
              containerPort: 8301
            - name: serflan-udp
              containerPort: 8301
              protocol: "UDP"
            - name: serfwan-tcp
              protocol: "TCP"
              containerPort: 8302
            - name: serfwan-udp
              containerPort: 8302
              protocol: "UDP"
            - name: rpc-server
              containerPort: 8300
            - name: dns-tcp
              containerPort: 8600
            - name: dns-udp
              containerPort: 8600
              protocol: "UDP"
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          livenessProbe:
            exec:
              command:
                - consul
                - operator
                - raft
                - list-peers
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - consul
                - members
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          lifecycle:
            preStop:
              exec:
                command:
                  - consul
                  - leave
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/consul/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/consul/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/consul/logs
              subPath: app-logs-dir
            - name: data
              mountPath: /bitnami/consul
      volumes:
        - name: empty-dir
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
